--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,8 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About Karen", about_path %></li>
+      <li><%= link_to "Photos/Videos", media_path %></li>
+      <li><%= link_to "Contact Karen", contact_path %></li>
     </ul>
   </div><!-- /.navbar-collapse -->
   </div><!-- /.container --> 
