--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-ash2/t1/260223_10150645882855538_2603656_n.jpg" alt="Blass Family" width="534" height="400">
 
-<h4>Click <%= link_to "here", "http://espn.com", class: "btn btn-primary" %> to join my exclusive mailing list! </h4>
+<h4>Click <%= link_to "Here", "http://espn.com", class: "btn btn-primary" %> to contact Karen today! </h4>
 
 </div>
 
